Fixed so that moving to about-rfc anchor would not cover the image on mobile

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -39,8 +39,8 @@ body {
 }
 
 .featurette-divider {
-	padding-top: 40px;
-	margin-top: 40px;
+	padding-top: 55px;
+	margin-top: 55px;
 }
 
 .featurette {
